# dfu-flasher-nusb

./: Cargo.toml  LICENSE  readme.md
dfu/: Cargo.toml  readme.md
dfu-flasher/: Cargo.toml
dfu-flasher-nusb/: Cargo.toml  readme.md
dfu-flasher-nusb/src/: main.rs
dfu-flasher/src/: dfu_core.rs  dfu_status.rs  dfuse_command.rs  error.rs  main.rs
dfu-nusb/: Cargo.toml
dfu-nusb/src/: core.rs  dfuse_command.rs  lib.rs  memory_layout.rs  status.rs
dfu/src/: core.rs  dfuse_command.rs  error.rs  lib.rs  memory_layout.rs  status.rs
