[package]
name = "dfu-flasher-nusb"
version = "0.4.4"
authors = ["fantasyzhjk <fantasyzhjk@outlook.com>"]
edition = "2021"
license = "MIT"
description = "Dfu-flasher redone in pure Rust"
homepage = "https://github.com/fantasyzhjk/dfuflash-nusb"
repository = "https://github.com/fantasyzhjk/dfuflash-nusb.git"
readme = "readme.md"

[dependencies]
dfu-nusb = { path = "../dfu-nusb", version = "0.4"}
log = "0.4"
structopt = "0.3"
serde_json = "1"
env_logger = "0.11"
nusb = "0.1.9"
pretty-hex = "0.4"