[package]
name = "dfu-flasher-nusb"
version = "0.4.4"
authors = ["mikael <mike7b4@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Dfu-flasher redone in pure Rust"
homepage = "https://gitlab.com/mike7b4/dfuflash"
repository = "https://gitlab.com/mike7b4/dfuflash.git"
readme = "readme.md"

[dependencies]
dfu = { path = "../dfu", version = "0.4"}
log = "0.4"
structopt = "0.3"
serde_json = "1"
env_logger = "0.11"
nusb = "0.1.9"
