[package]
name = "dfu-nusb"
version = "0.4.4"
authors = ["fantasyzhjk <fantasyzhjk@outlook.com>"]
edition = "2021"
license = "MIT"
description = "The core DFU library used by DFU flasher."
homepage = "https://github.com/fantasyzhjk/dfuflash-nusb"
repository = "https://github.com/fantasyzhjk/dfuflash-nusb.git"
readme = "readme.md"

[dependencies]
log = "0.4"
nusb = "0.1.9"
futures-lite = "2.3.0"
tokio = { version = "1", features = ["time"] }

[dependencies.serde]
version = "1"
features = ["derive"]

