[package]
name = "dfu"
version = "0.2.0"
authors = ["Mikael <mike7b4@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "The core DFU library used by DFU flasher."
repository = "https://gitlab.com/mike7b4/dfuflash"
homepage = "https://gitlab.com/mike7b4/dfuflash.git"

[dependencies]
log = "0.4"
nix = "0.18"
usbapi = "0.2"
serde-hex = "0.1"

[dependencies.serde]
version = "1"
features=["derive"]

