[package]
name = "dfu"
version = "0.4.0"
authors = ["Mikael <mike7b4@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "The core DFU library used by DFU flasher."
repository = "https://gitlab.com/mike7b4/dfuflash"
homepage = "https://gitlab.com/mike7b4/dfuflash.git"
readme = "readme.md"

[dependencies]
log = "0.4"
nix = "0.20"
usbapi = {path = "../../usbapi-rs", version = "0.4"}

[dependencies.serde]
version = "1"
features=["derive"]

