[package]
name = "dfu-nusb"
version = "0.4.4"
authors = ["Mikael <mike7b4@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "The core DFU library used by DFU flasher."
repository = "https://gitlab.com/mike7b4/dfuflash"
homepage = "https://gitlab.com/mike7b4/dfuflash.git"
readme = "readme.md"

[dependencies]
log = "0.4"
nusb = "0.1.9"
futures-lite = "2.3.0"

[dependencies.serde]
version = "1"
features = ["derive"]

